--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,6 +29,6 @@ jobs:
         python setup.py sdist bdist_wheel
         twine upload dist/*
       env:
-        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      working-directory: ${{ github.workspace }}
+       TWINE_USERNAME: __token__
+    TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+  working-directory: ${{ github.workspace }}
