--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,5 +30,5 @@ jobs:
         twine upload dist/*
       env:
        TWINE_USERNAME: __token__
-    TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+    TWINE_PASSWORD: ${{ secrets.apiauth }}
   working-directory: ${{ github.workspace }}
