--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         python setup.py sdist bdist_wheel
         twine upload dist/*
-      env:
-       TWINE_USERNAME: __token__
-    TWINE_PASSWORD: ${{ secrets.apiauth }}
+     env:
+    TWINE_USERNAME: __token__
+    TWINE_PASSWORD: ${{ secrets.PyPIToken }}  # Use the correct secret name
   working-directory: ${{ github.workspace }}
