Update and rename workflow.yml to workflow.yaml

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -32,3 +32,11 @@ jobs:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PyPIToken }}
       working-directory: ${{ github.workspace }}
+      
+  - name: Debug PyPI Token
+  run: echo ${{ secrets.PyPIToken }}
+
+  - name: Update Twine
+  run: pip install --upgrade twine
+
+
